<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C74DDFD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/texttitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="40dp"
            android:text="@string/please_enter_the_details_below"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texttitle1"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name1"
            android:layout_marginTop="20dp"
            android:autofillHints="Password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password1"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/rno1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email1"
            android:layout_marginTop="20dp"
            android:autofillHints="Roll number"
            android:hint="@string/roll_number"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/batch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rno1"
            android:layout_marginTop="20dp"
            android:autofillHints="Batch"
            android:hint="@string/batch"
            android:inputType="text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnInsert1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/batch1"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            app:backgroundTint="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/signin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnInsert1"
            android:layout_marginTop="75dp"
            android:background="@android:color/transparent"
            android:text="@string/existing_user_sign_in_here"
            android:textColor="@color/black"
            app:backgroundTint="#0DE4CF" />

    </RelativeLayout>
</ScrollView>