<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C74DDFD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="402dp"
            android:layout_height="307dp"
            android:contentDescription="@string/nothing"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon1" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_marginBottom="15dp"
            android:autofillHints="Username"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="30dp"
            android:autofillHints="Password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            app:backgroundTint="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnlogin"
            android:layout_marginTop="90dp"
            android:background="@android:color/transparent"
            android:text="New User? Register here"
            android:textColor="@color/black" />

    </RelativeLayout>
</ScrollView>