<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C74DDFD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".UpdateActivity">

        <TextView
            android:id="@+id/texttitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:text="Enter new details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texttitle4"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name4"
            android:layout_marginTop="20dp"
            android:autofillHints="Password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password4"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="text" />

        <EditText
            android:id="@+id/rno4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email4"
            android:layout_marginTop="20dp"
            android:autofillHints="Roll number"
            android:hint="@string/roll_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/batch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rno4"
            android:layout_marginTop="20dp"
            android:autofillHints="Batch"
            android:hint="@string/batch"
            android:inputType="text" />

        <Button
            android:id="@+id/update4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/batch4"
            android:layout_marginTop="45dp"
            android:text="Update details"
            app:backgroundTint="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/signout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update4"
            android:layout_marginTop="75dp"
            android:background="@android:color/transparent"
            android:text="Log out"
            android:textColor="@color/black"
            app:backgroundTint="#0DE4CF" />
    </RelativeLayout>
</ScrollView>